--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,7 +10,7 @@ expandvars = "^0.6.5"
 numpy = "1.24"
 python = ">=3.8,<3.13"
 python-dateutil = "^2.8.1"
-signal-processing-algorithms = "^1.3.2"
+signal-processing-algorithms = "1.3.5"
 "ruamel.yaml" = "=0.17.21"
 requests = "^2.25.1"
 pystache = "^0.6.0"
